package curso.poo.trivial_v4_diferente;

public class Casilla {
}
