package curso.poo.trivial_v4_diferente;

public enum Categoria {

    GEOGRAFIA, ARTE_Y_LITERATURA, HISTORIA, ENTRETENIMIENTO, CIENCIAS_Y_NATURALEZA, DEPORTES_Y_PASATIEMPOS

}
