package curso.poo.trivial_v4_diferente;

public enum Color {

    AZUL, MORADO, AMARILLO, ROSA, VERDE, NARANJA

}
