package curso.poo.trivial_v4_diferente;

public enum Quesito {

    AZUL, MORADO, AMARILLO, ROSA, VERDE, NARANJA;

}
